# xasm-rs

./: Cargo.toml  LICENSE  LICENSE.md  README.md  out
src/: genasm.rs  init.rs  instructions.rs  lib.rs  mkwnasm.rs  osconfig.rs  xstd.rs
src/asm_makers/: linx8664.rs  mod.rs
src/impls/: variables.rs
